[package]
name = "mqtt_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_default = [ ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mqtt-procmacro = { path = "mqtt-procmacro" }

