[package]
name = "mqtt_macro"
version = "0.1.0"
edition = "2018"
authors = ["Johannes Draaijer <johannes.draaijer@mobilaris.se>", "Kristoffer Ödmark <kristoffer.odmark@mobilaris.se>"]
license = "MIT"
description = "MqttItem trait, that helps with defining topics and json payloads for MQTT broker usage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_default = [ ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mqtt-procmacro = { version = "1.0", path = "mqtt-procmacro" }

