[package]
name = "mqtt-procmacro"
version = "1.0.0"
edition = "2018"
authors = ["Johannes Draaijer <johannes.draaijer@mobilaris.se>", "Kristoffer Ödmark <kristoffer.odmark@mobilaris.se>"]
license = "MIT"
description = "procmacro, ignore"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro-error = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.1"
quote = "1.0"
